# Raytracer

./: CMakeCache.txt  CMakeLists.txt  IShape.hpp  Makefile  Primitives.cpp  Primitives.hpp  Ray.cpp  Ray.hpp  RaytracerEngine.cpp  RaytracerEngine.hpp  Scene.cpp  Scene.hpp  SceneDisplayer.cpp  SceneDisplayer.hpp  Sphere.cpp  Sphere.hpp  cmake_install.cmake  main.cpp  parser.py  readme.md
Latex/: projet.aux  projet.dvi  projet.idx  projet.tex
appel systeme et retour d'argument c++/: Makefile  bloup.py  main  main.cpp
scenery/: example.scn  multi_window.scn  readme.md  sphere.scn  test1.scn  test2.scn
src/: Camera.cpp  Camera.hpp  Collection.cpp  Collection.hpp  Collision.cpp  Collision.hpp  CollisionManager.cpp  CollisionManager.hpp  Color.hpp  IMaterial.hpp  IShape.cpp  IShape.hpp  Lamp.cpp  Lamp.hpp  Material.cpp  Material.hpp  Monochromatic.cpp  Monochromatic.hpp  Object.cpp  Object.hpp  Optional.hpp  Plane.cpp  Plane.hpp  Primitives.cpp  Primitives.hpp  Ray.cpp  Ray.hpp  RaytracerEngine.cpp  RaytracerEngine.hpp  ResourceManager.cpp  ResourceManager.hpp  Scene.cpp  Scene.hpp  SceneDisplayer.hpp  ShapeManager.cpp  ShapeManager.hpp  Sphere.cpp  Sphere.hpp  Test.hpp  Triangle.cpp  (+6 more)
src/Core/: Camera.cpp  Camera.hpp  Collision.cpp  Collision.hpp  IShape.hpp  Material.hpp  Primitives.cpp  Primitives.hpp  Ray.hpp
src/GUI/: SceneDisplayer.cpp  WindowManager.cpp  WindowManager.hpp
src/Shapes/: Plane.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp  Triangle.hpp
src/Tools/: Chrono.hpp  Color.cpp  Color.hpp  Debug.cpp  Debug.hpp  Functor.hpp  Optional.hpp  ResourceManager.hpp
src/tests/: test1.cpp
